--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "jaded",
     "version": "0.0.0",
     "dependencies": {
-        "jade": "0.28.2"
+        "jade": "0.28.2",
+        "iced-coffee-script": "1.4.0c"
     }
 }
